OO-3286: batch import of users in curriculum like in course member management